--- a/src/script/responsivo.css
+++ b/src/script/responsivo.css
@@ -120,7 +120,19 @@
 
     .caixa-minha-conta, .caixa-compra {margin: 0 0 5vh 0;}
 
+    .conheca-produtos {
+        width: 100%;
+        box-shadow: none;
+    }
+
     .conheca-produtos h1 {font-size: 2.5em;}
+
+    .prod-destaque-direita img, .prod-destaque-esquerda img {
+        width: 100%;
+        margin-bottom: 1.5em;
+    }
+
+    .produtos-index {width: 100%;}
 }
 
 /* MOBILE */
@@ -160,9 +172,4 @@
     .caixa-minha-conta, .caixa-compra {width: 100%;}
 
     .produto {width: 80%;}
-
-    .prod-destaque-direita img, .prod-destaque-esquerda img {
-        width: 100%;
-        margin-bottom: 1.5em;
-    }
 }
