🔨Aba Lateral (falta o js)

--- a/src/script/style.css
+++ b/src/script/style.css
@@ -340,23 +340,43 @@ nav .btnmenu-mobile {
 
 .cad-login a:hover {color: var(--cor1);}
 
-/*MENSAGEM ERRO  LOGO*/
-.image-container {
-    display: flex;
+/* BARRA LATERAL - HISTÓRICO */
+#carrinho {
+    display: none; /* Display inicial */
+    z-index: 5;
+    position: fixed;
+    top: 0;
+    right: 0;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    height: 150px; /* Altura do contêiner flexível */
-    width: 100%; /* Largura do contêiner flexível */
-    
+    width: 300px;
+    height: 100%;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 0 30px var(--sombra);
 }
 
-    /* CSS para formatar a imagem */
-#image {
-    display: none;
-    width: 350px; /* Largura da imagem */
-    height: auto; /* Altura automática para manter a proporção */
-    opacity: 100%;
-    z-index: 2;
+#carrinho ion-icon {
+    font-size: 4em;
+    color: var(--cor4);
+}
+
+#carrinho h1 {
+    font-size: 1.7em;
+    color: var(--cor2);
+}
+
+#carrinho a {
+    font-family: texto-negrito;
+    color: var(--cor3);
+}
+
+#carrinho a:hover {
+    color: var(--cor2);
+    text-decoration: underline;
 }
 
 /* PÁGINA INICIAL */
@@ -482,15 +502,17 @@ nav .btnmenu-mobile {
     justify-content: space-between;
 }
 
+/* PRODUTOS - RESULTADO */
+.produtos-resultado {
+    margin-top: 10vh;
+    width: 85%;
+    text-align: center;
+}
+
 /* ATRIBUTOS PARA PRODUTO */
 .produto {
     display: inline-block;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
     margin: 10px;
-    width: 20%;
     padding: 20px;
     box-shadow: 0 0 10px var(--sombra);
 }
