--- a/src/script/responsivo.css
+++ b/src/script/responsivo.css
@@ -31,7 +31,9 @@
 
     .menu-pesquisa {
         position: absolute;
+        top: 3vh;
         left: 19vh;
+        width: 55%;
     }
 
     .produto {width: 35vh;}
@@ -112,6 +114,7 @@
     .listamenu {left: 37vh;}
 
     .menu-pesquisa {
+        top: 1.5vh;
         left: 17vh;
         width: 40%;
     }
@@ -126,11 +129,6 @@
     }
 
     .conheca-produtos h1 {font-size: 2.5em;}
-
-    .prod-destaque-direita img, .prod-destaque-esquerda img {
-        width: 100%;
-        margin-bottom: 1.5em;
-    }
 
     .produtos-index {width: 100%;}
 }
@@ -172,4 +170,10 @@
     .caixa-minha-conta, .caixa-compra {width: 100%;}
 
     .produto {width: 80%;}
+
+    
+    .prod-destaque-direita img, .prod-destaque-esquerda img {
+        width: 100%;
+        margin-bottom: 1.5em;
+    }
 }
