--- a/src/script/style.css
+++ b/src/script/style.css
@@ -509,7 +509,6 @@ nav .btnmenu-mobile {
     flex-direction: column;
     margin-top: 20vh;
     width: 95%;
-    border: 2px solid red;
     align-items: flex-start;
     padding: 10px;
 }
@@ -519,9 +518,8 @@ nav .btnmenu-mobile {
 .produtos-resultado {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
-    border: 2px solid blue;
     width: 80%;
 }
 
@@ -530,14 +528,35 @@ nav .btnmenu-mobile {
 #pesquisa-prod {
     display: flex;
     justify-content: space-around;
-    border: 2px solid greenyellow;
+    margin-top: 2vh;
 }
 
     /* Filtro */
 #filtro {
-    padding: 10px;
-    width: 25%;
-    border: 2px solid orange;
+    position: sticky; /* Testar */
+    top: 15vh;
+    padding: 10px 10px 10px 0;
+    width: 20%;
+}
+
+#filtro h1 {
+    font-size: 1.2em;
+    font-family: texto-negrito;
+    color: var(--cor2);
+}
+
+#filtro input, #filtro select {
+    margin: 2px 0 20px 0;
+    padding: 5px;
+    height: 5vh;
+    width: 100%;
+    font-size: 0.9em;
+    border-color: var(--cinza);
+}
+
+#filtro select:focus {
+    outline: none;
+    border-color: var(--cor1);
 }
 
 /* ATRIBUTOS PARA PRODUTO */
@@ -545,7 +564,7 @@ nav .btnmenu-mobile {
     display: flex;
     flex-wrap: wrap;
     margin: 10px;
-    width: 20%;
+    width: 21%;
     height: 430px;
     padding: 20px;
     justify-content: space-around;
