--- a/src/script/style.css
+++ b/src/script/style.css
@@ -504,31 +504,96 @@ nav .btnmenu-mobile {
 }
 
 /* PRODUTOS - RESULTADO */
-.container-produtos {
+#container-produtos {
     display: flex;
     flex-direction: column;
     margin-top: 20vh;
-    width: 80%;
-    border: 2px solid red;
+    width: 95%;
     align-items: flex-start;
+    padding: 10px;
 }
 
-.container-produtos h1 {color: var(--cor1);}
-.container-produtos h1, .container-produtos p {padding-left: 3.5vh;}
+#container-produtos h1 {color: var(--cor1);}
 
-.produtos-resultado {
+#produtos-resultado {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
+    width: 80%;
 }
+
+/* PESQUISA */
+/* Container que agrupa todos os elementos da pesquisa.php */
+#pesquisa-prod {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2vh;
+}
+
+    /* Filtro */
+#filtro {
+    position: sticky; /* Testar */
+    top: 15%;
+    padding: 10px 10px 10px 0;
+    width: 20%;
+}
+
+#filtro h1 {
+    font-size: 1.2em;
+    font-family: texto-negrito;
+    color: var(--cor2);
+}
+
+
+
+#filtro .txt-preco, #filtro select {
+    margin: 2px 0 20px 0;
+    padding: 5px;
+    width: 100%;
+    height: 5vh;
+    font-size: 0.9em;
+    border-color: var(--cinza);
+}
+
+#filtro .txt-preco {
+    width: 10vh;
+    border: 1px solid var(--cinza);
+}
+
+#filtro .btn-filtrar {
+    width: 100%;
+    padding: 10px;
+    border-radius: 15px;
+    border: none;
+    background-color: var(--cor4);
+    font-size: 1em;
+    font-family: texto-negrito;
+    color: var(--cor2);
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+
+#filtro .btn-filtrar:hover {
+    background-color: var(--cor2);
+    color: var(--cor4);
+}
+
+    /* Barra de Preço */
+#preco-display {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+#barra-preco {accent-color: var(--cor3);}
 
 /* ATRIBUTOS PARA PRODUTO */
 .produto {
     display: flex;
     flex-wrap: wrap;
     margin: 10px;
-    width: 20%;
+    width: 21%;
     height: 430px;
     padding: 20px;
     justify-content: space-around;
@@ -563,7 +628,7 @@ nav .btnmenu-mobile {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20vh;
+    margin-top: 10vh;
     width: 90%;
     min-height: 90vh;
     padding: 0px 60px;
