--- a/src/script/style.css
+++ b/src/script/style.css
@@ -591,7 +591,7 @@ nav .btnmenu-mobile {
     flex-wrap: wrap;
     margin: 10px;
     width: 21%;
-    height: 430px;
+    height: 460px;
     padding: 20px;
     justify-content: space-around;
     box-shadow: 0 0 10px var(--sombra);
@@ -626,6 +626,7 @@ nav .btnmenu-mobile {
     justify-content: space-between;
     align-items: center;
     width: 90%;
+    margin-top: 10vh;
     min-height: 90vh;
     padding: 0px 60px;
 }
