--- a/src/script/style.css
+++ b/src/script/style.css
@@ -498,6 +498,7 @@ nav .btnmenu-mobile {
 
 .produtos-conteudo {
     display: flex;
+    margin-top: 3vh;
     justify-content: space-between;
 }
 
