--- a/src/script/responsivo.css
+++ b/src/script/responsivo.css
@@ -63,8 +63,9 @@
 @media (max-width: 870px) {
     #produtos-resultado .produto {
         flex-direction: column;
+        justify-content: center;
         width: 100%;
-        height: 210px;
+        height: 200px;
     }
 
     #produtos-resultado .produto img {
@@ -72,12 +73,48 @@
         height: 23vh;
     }
 
+    #container-produtos h1, #container-produtos p {margin-left: 1.5vh;}
+    
+    #filtro {display: none;}
+
+    #produtos-resultado {width: 100%;}
+
     .info-prod-mobile {
         display: flex;
-        width: 40vh;
+        margin-left: 1.5vh;
+        width: 68%;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .info-prod-mobile p, .info-prod-mobile .preco {font-size: 1.1em;}
+
+    .info-txt {
+        display: flex;
         flex-direction: column;
         align-items: flex-start;
+        text-align: left;
     }
+
+    .info-txt .descricao-prod {
+        font-size: 0.8em;
+        color: var(--cinza);
+    }
+
+    .botoes-produto {
+        flex-direction: column;
+        justify-content: space-between;
+        height: 130px;
+    }
+
+    .botoes-produto button {display: none;}
+
+    .botoes-produto ion-icon {
+        font-size: 5.5vh;
+        margin: 0 2vh;
+    }
+
+    .icon-mobile-compra, .descricao-prod {display: inherit;}
 }
 
 @media (max-width: 770px) {
@@ -151,6 +188,32 @@
     .produtos-index {width: 100%;}
 }
 
+@media (max-width: 645px) {
+    #container-produtos {
+        width: 100%;
+        padding: 0;
+    }
+
+    #produtos-resultado .produto {
+        height: 170px; /* Mesmo tamanho que da imagem */
+    }
+
+    #produtos-resultado .produto img {
+        height: 130px;
+        width: 130px;
+    }
+
+    .info-prod-mobile {margin-left: 1vh;}
+
+    .info-prod-mobile p, .info-prod-mobile .preco {font-size: 0.9em;}
+    .info-txt .descricao-prod {font-size: 0.6em;}
+
+    .botoes-produto ion-icon {
+        font-size: 4vh;
+        margin: 0 1vh;
+    }
+}
+
 /* MOBILE */
 @media (max-width: 530px) {
     .menu-pc-mobile a {
@@ -187,8 +250,34 @@
 
     .caixa-minha-conta, .caixa-compra {width: 100%;}
 
-    .produto {width: 80%;}
+    #container-produtos h1 {font-size: 1.6em;}
 
+    #produtos-resultado .produto {
+        height: 140px;
+        padding-left: 0;
+    }
+
+    #produtos-resultado .produto img {
+        height: 140px;
+        width: 140px;
+    }
+
+    .info-prod-mobile {
+        margin-left: 0;
+        width: 60%;
+    }
+
+    .info-prod-mobile p, .info-prod-mobile .preco {font-size: 0.8em;}
+
+    .info-txt .descricao-prod {display: none;}
+
+    .botoes-produto {
+        height: 100px;
+    }
+
+    .botoes-produto ion-icon {
+        font-size: 3.5vh;
+    }
     
     .prod-destaque-direita img, .prod-destaque-esquerda img {
         width: 100%;
