--- a/src/script/responsivo.css
+++ b/src/script/responsivo.css
@@ -186,7 +186,7 @@
         width: 100%;
     }
 
-    .listamenu {left: 37vh;}
+    .listamenu {right: 37vh;}
 
     .menu-pesquisa {
         top: 1.5vh;
