--- a/src/script/style.css
+++ b/src/script/style.css
@@ -140,6 +140,8 @@ nav a:hover {background-color: var(--cor4);}
 
     /* Botões do Menu */
 nav .btnmenu-pc {
+    position: relative;
+    display: inline-block; /* Sujeito a mudança */
     margin: -2.2px;
     padding: 5px;
     width: 80px;
@@ -163,14 +165,15 @@ nav .btnmenu-mobile {
     border: none;
     background: transparent;
     cursor: pointer;
-    top: 10vh;
 }
 
     /* Listas do Menu - Apenas quando passa o mouse por cima */
 .listamenu {
     display: none;
-    position: fixed;
+    position: absolute;
+    width: max-content;
     top: 13vh; /* Mesmo valor da altura do header */
+    left: 0;
     border-radius: 0px 0px 7px 7px;
     box-shadow: 3px 3px 5px var(--sombra);
     background-color: var(--cor4);
@@ -179,9 +182,9 @@ nav .btnmenu-mobile {
 
 .btnmenu-mobile .listamenu {top: 10vh;}
 
-.listamenu.btnconta {right: 29.5vh;}
-.listamenu.btnsuporte {right: 21.3vh;}
-.listamenu.btncarrinho {right: 5.5vh;}
+.listamenu .btnconta {left: 29.5vh;}
+.listamenu .btnsuporte {left: 21.3vh;}
+.listamenu .btnsacola {left: 5.5vh;}
 
 .listamenu a.link-listamenu {
     display: block;
