--- a/src/script/style.css
+++ b/src/script/style.css
@@ -1153,6 +1153,61 @@ nav .btnmenu-mobile {
     color: var(--cor1);
 }
 
+/* FINALIZAR COMPRA */
+.containers-finalizar-compra {
+    margin-bottom: 20px;
+    border: 3px solid var(--cor4);
+    border-radius: 15px;
+    padding: 20px 10px;
+}
+
+.containers-finalizar-compra h2 {
+    margin: 5px 0 10px 20px;
+    font-size: 2em;
+    font-family: titulo;
+    color: var(--cor2);
+}
+
+.containers-finalizar-compra span {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.containers-finalizar-compra input {
+    width: 100%;
+    margin: 5px 20px;
+    padding: 5px;
+    font-size: 1.1em;
+}
+
+.containers-finalizar-compra select {
+    width: 100%;
+    height: 5vh;
+}
+
+#pagamento {
+    margin: 10px;
+    width: 95%;
+}
+
+#info_cartao {
+    margin: 10px;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#boleto ion-icon {
+    align-items: center;
+    font-size: 1.2em;
+}
+
+.preco-checkout-fixo {
+    position: fixed;
+    top: 30vh;
+    left: 135vh;
+}
+
 /* RODAPÉ */
 #rodape {
     display: flex;
