--- a/src/script/style.css
+++ b/src/script/style.css
@@ -1181,8 +1181,10 @@ nav .btnmenu-mobile {
 }
 
 .containers-finalizar-compra select {
+    padding-left: 10px;
     width: 100%;
     height: 5vh;
+    font-size: 1em;
 }
 
 #pagamento {
